--- a/_notebooks/2021-06-22-hello-pyspark.ipynb
+++ b/_notebooks/2021-06-22-hello-pyspark.ipynb
@@ -4,27 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hello PySpark"
+    "# \"Hello PySpark!\"\n",
+    "\n",
+    "> Get up and running fast with a local pyspark session, and learn the essentials of working with dataframes at scale.\n",
+    "\n",
+    "- toc: flase\n",
+    "- image: images/guiones_wave.jpeg\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Well, there's no way to sugar coat this, so I'll just say it: it's time for us to learn pyspark.\n",
+    "![](nb_images/guiones_wave.jpeg \"A big day at Playa Guiones.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, you guessed it: it's time for us to learn pyspark!\n",
     "\n",
-    "Yes, yes, I hear you screaming into your pillow. I know we just spent all that time converting from R and learning python and pandas and why the hell do we need yet another API for working with dataframes?\n",
-    "That's a great questionn; glad you asked.\n",
+    "I know, I know, I can hear you screaming into your pillow. Indeed we just spent all that time converting from R and learning python and why the hell do we need yet another API for working with dataframes?\n",
+    "That's a totally fair question.\n",
     "\n",
-    "Basically it comes down to scalability. \n",
-    "If our pythonic prototypes are going to be useful in the real world where datasets are too large to fit in memory, we need a way for our computations and datasets to scale across multiple nodes in a distributed system.\n",
+    "So what happens when we're working on something in the real world, where datasets get large in a hurry, and we suddenly have a dataframe that no longer fits into memory?\n",
+    "We need a way for our computations and datasets to scale across multiple nodes in a distributed system without having to get too fussy about all the distributed compute details.\n",
     "\n",
     "Enter PySpark.\n",
     "\n",
-    "[Apache Spark](https://spark.apache.org/) is a unified analytics engine for large-scale data processing. \n",
+    "I think it's fair to think of pyspark as a python package for working with arbitrarily large dataframes, i.e., it's like pandas but scalable.\n",
+    "It's built on top of [Apache Spark](https://spark.apache.org/), a unified analytics engine for large-scale data processing. \n",
     "[PySpark](https://spark.apache.org/docs/latest/api/python/)  is essentially a way to access the functionality of spark via python code. \n",
     "While there are other high-level interfaces to spark (such as Java, Scala, and R), for data scientists who are already working extensively with python, pyspark will be the natural interface of choice.\n",
-    "As if that weren't enough, pyspark also has great integration with [SQL](https://spark.apache.org/docs/latest/sql-programming-guide.html), and it has a scalable [machine learning library](https://spark.apache.org/mllib/).\n",
+    "PySpark also has great integration with [SQL](https://spark.apache.org/docs/latest/sql-programming-guide.html), and it has a companion machine learning library called [MLlib](https://spark.apache.org/mllib/) that's more or less a scalable scikit-learn.\n",
     "\n",
     "So, here's the plan. \n",
     "First we're going to get set up to run pyspark locally in a jupyter notebook on our laptop.\n",
@@ -42,7 +55,7 @@
     "## How to Run PySpark in a Jupyter Notebook on Your Laptop\n",
     "\n",
     "Ok, I'm going to walk us through how to get things installed on a Mac or Linux machine where we're using homebrew and conda to manage virtual environments.\n",
-    "If you have a different setup, your favorite search engine will help you."
+    "If you have a different setup, your favorite search engine will help you get pyspark set up locally."
    ]
   },
   {
@@ -143,7 +156,7 @@
     "```\n",
     "\n",
     "This time we get a familiar python `>>>` prompt.\n",
-    "This is an interactive pyspark shell where we can easily experiment with pyspark.\n",
+    "This is an interactive shell where we can easily experiment with pyspark.\n",
     "Feel free to run the example code in this post here in the pyspark shell, or, if you prefer a notebook, read on and we'll get set up to run pyspark in a jupyter notebook."
    ]
   },
@@ -200,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -227,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,9 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Brief Aside: Creating PySpark dataframes in Real Life\n",
-    "\n",
-    "It's worth a quick note that in real life when we're running pyspark on a large-scale distributed system, we would not generally want to use python lists or pandas dataframes to load data into pyspark. \n",
+    "> Note: In real life when we're running pyspark on a large-scale distributed system, we would not generally want to use python lists or pandas dataframes to load data into pyspark. \n",
     "Ideally we would want to read data directly from where it is stored on HDFS, e.g. by reading [parquet files](https://spark.apache.org/docs/latest/sql-data-sources-parquet.html), or by querying directly from a hive database using [spark sql](https://spark.apache.org/docs/latest/sql-programming-guide.html)."
    ]
   },
@@ -350,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +370,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,117 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>total_bill</th>\n",
-       "      <th>tip</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>smoker</th>\n",
-       "      <th>day</th>\n",
-       "      <th>time</th>\n",
-       "      <th>size</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>16.99</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10.34</td>\n",
-       "      <td>1.66</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>21.01</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>23.68</td>\n",
-       "      <td>3.31</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>24.59</td>\n",
-       "      <td>3.61</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   total_bill   tip     sex smoker  day    time  size\n",
-       "0       16.99  1.01  Female     No  Sun  Dinner     2\n",
-       "1       10.34  1.66    Male     No  Sun  Dinner     3\n",
-       "2       21.01  3.50    Male     No  Sun  Dinner     3\n",
-       "3       23.68  3.31    Male     No  Sun  Dinner     2\n",
-       "4       24.59  3.61  Female     No  Sun  Dinner     4"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pandas_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -571,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +481,7 @@
        "DataFrame[day: string, time: string, total_bill: double]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +516,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +561,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +599,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, tip_percent: double]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that we've imported the [`pyspark.sql.functions`]([pyspark.sql.functions](https://spark.apache.org/docs/2.4.0/api/python/pyspark.sql.html#module-pyspark.sql.functions)) module. This module contains all kinds of useful functions that we'll be using, so it's probably a good idea to go ahead and import it whenever you're using pyspark.\n",
+    "Notice that we've imported the [`pyspark.sql.functions`]([pyspark.sql.functions](https://spark.apache.org/docs/2.4.0/api/python/pyspark.sql.html#module-pyspark.sql.functions)) module. This module contains lots of useful functions that we'll be using all over the place, so it's probably a good idea to go ahead and import it whenever you're using pyspark.\n",
     "BTW, it seems like folks usually import this module as `f` or `F`.\n",
     "In this example we're using the `col()` function, which allows us to refer to columns in our dataframe using string representations of the column names.\n",
     "\n",
@@ -724,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +634,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, tip_percent: double]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +663,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, bill_squared: double]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -796,7 +697,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, is_female: boolean]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,18 +724,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Group by and aggregate\n",
+    "\n",
+    "PySpark provides a `groupBy()` method similar to the pandas `groupby()`.\n",
+    "Just like in pandas, we can call methods like `count()` and `mean()` on our grouped dataframe, and we also have a more flexible `agg()` method that allows us to specify column-aggregation mappings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+\n",
+      "|  time|count|\n",
+      "+------+-----+\n",
+      "| Lunch|   68|\n",
+      "|Dinner|  176|\n",
+      "+------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# group by and count\n",
+    "pyspark_df.groupBy('time').count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+--------+------------------+\n",
+      "|  time|max(tip)|   avg(total_bill)|\n",
+      "+------+--------+------------------+\n",
+      "| Lunch|     6.7|17.168676470588235|\n",
+      "|Dinner|    10.0| 20.79715909090909|\n",
+      "+------+--------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# group by and specify column-aggregation mappings with agg()\n",
+    "pyspark_df.groupBy('time').agg({'total_bill': 'mean', 'tip': 'max'}).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to get fancier with your aggregations, it might just be easier to express them using hive syntax. read on to find out how."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Run Hive SQL on dataframes\n",
     "\n",
     "One of the mind-blowing features of pyspark is that it \n",
     "allows you to write hive SQL queries on your dataframes.\n",
     "To take a pyspark dataframe into the SQL world, use the `createOrReplaceTempView()` method.\n",
+    "This method takes one string argument which will be the dataframes name in the SQL world.\n",
     "Then you can use `spark.sql()` to run a query. \n",
     "The result is returned as a pyspark dataframe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -948,8 +915,19 @@
    ],
    "source": [
     "# read aggregated pyspark dataframe into pandas for plotting\n",
-    "plot_df = tip_stats_by_time.toPandas()\n",
-    "plot_df.plot.bar(x='time', y=['avg_tip', 'med_tip']);"
+    "plot_pdf = tip_stats_by_time.toPandas()\n",
+    "plot_pdf.plot.bar(x='time', y=['avg_tip', 'med_tip']);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wrapping Up\n",
+    "\n",
+    "So that's a wrap on our crash course in working with pyspark.\n",
+    " You now have a good idea of what pyspark is and how to get started manipulating dataframes with it. \n",
+    "May no dataframe be too large for you ever again."
    ]
   },
   {
