Some finishing touches.

--- a/_notebooks/2021-06-22-hello-pyspark.ipynb
+++ b/_notebooks/2021-06-22-hello-pyspark.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# \"Hello PySpark!\"\n",
     "\n",
-    "> Get up and running fast with a local pyspark session, and learn the essentials of working with dataframes at scale.\n",
+    "> Get up and running fast with a local pyspark installation, and learn the essentials of working with dataframes at scale.\n",
     "\n",
     "- toc: flase\n",
     "- image: images/guiones_wave.jpeg\n"
@@ -26,6 +26,7 @@
     "Well, you guessed it: it's time for us to learn pyspark!\n",
     "\n",
     "I know, I know, I can hear you screaming into your pillow. Indeed we just spent all that time converting from R and learning python and why the hell do we need yet another API for working with dataframes?\n",
+    "\n",
     "That's a totally fair question.\n",
     "\n",
     "So what happens when we're working on something in the real world, where datasets get large in a hurry, and we suddenly have a dataframe that no longer fits into memory?\n",
@@ -305,10 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# create pyspark dataframe from nested  lists\n",
     "my_df = spark.createDataFrame(\n",
     "    data=[\n",
@@ -346,8 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note: In real life when we're running pyspark on a large-scale distributed system, we would not generally want to use python lists or pandas dataframes to load data into pyspark. \n",
-    "Ideally we would want to read data directly from where it is stored on HDFS, e.g. by reading [parquet files](https://spark.apache.org/docs/latest/sql-data-sources-parquet.html), or by querying directly from a hive database using [spark sql](https://spark.apache.org/docs/latest/sql-programming-guide.html)."
+    "> Note: In real life when we're running pyspark on a large-scale distributed system, we would not generally want to use python lists or pandas dataframes to load data into pyspark.  Ideally we would want to read data directly from where it is stored on HDFS, e.g. by reading [parquet files](https://spark.apache.org/docs/latest/sql-data-sources-parquet.html), or by querying directly from a hive database using [spark sql](https://spark.apache.org/docs/latest/sql-programming-guide.html)."
    ]
   },
   {
@@ -686,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -694,10 +695,10 @@
     {
      "data": {
       "text/plain": [
-       "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, is_female: boolean]"
+       "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, is_male: boolean]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +706,7 @@
    "source": [
     "#hide_output\n",
     "# conditional assignment (like CASE WHEN)\n",
-    "pyspark_df.withColumn('is_female', f.when(f.col('sex') == 'Female', True).otherwise(False))"
+    "pyspark_df.withColumn('is_male', f.when(f.col('sex') == 'Male', True).otherwise(False))"
    ]
   },
   {
@@ -750,6 +751,7 @@
     }
    ],
    "source": [
+    "\n",
     "# group by and count\n",
     "pyspark_df.groupBy('time').count().show()"
    ]
@@ -774,6 +776,7 @@
     }
    ],
    "source": [
+    "\n",
     "# group by and specify column-aggregation mappings with agg()\n",
     "pyspark_df.groupBy('time').agg({'total_bill': 'mean', 'tip': 'max'}).show()"
    ]
@@ -823,6 +826,7 @@
     }
    ],
    "source": [
+    "\n",
     "# put pyspark dataframe in SQL world and query it\n",
     "pyspark_df.createOrReplaceTempView('tips')\n",
     "spark.sql('select * from tips').show(5)"
@@ -866,6 +870,7 @@
     }
    ],
    "source": [
+    "\n",
     "# run hive query and save result to dataframe\n",
     "tip_stats_by_time = spark.sql(\"\"\"\n",
     "    select\n",
@@ -914,6 +919,7 @@
     }
    ],
    "source": [
+    "\n",
     "# read aggregated pyspark dataframe into pandas for plotting\n",
     "plot_pdf = tip_stats_by_time.toPandas()\n",
     "plot_pdf.plot.bar(x='time', y=['avg_tip', 'med_tip']);"
