More minor edits

--- a/_notebooks/2021-06-22-hello-pyspark.ipynb
+++ b/_notebooks/2021-06-22-hello-pyspark.ipynb
@@ -207,47 +207,20 @@
     "\n",
     "Go ahead and fire up a new notebook using a regular python 3 kernal.\n",
     "Once you land inside the notebook, there are a couple things we need to do to get a spark session instantiated.\n",
-    "You can thing of this as boilerplate code that we need to run in the first cell of a notebook where we're going to use pyspark.\n",
-    "\n",
-    "First import findspark and run its `init` method."
+    "You can thing of this as boilerplate code that we need to run in the first cell of a notebook where we're going to use pyspark."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import findspark\n",
-    "\n",
-    "findspark.init()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you get errors, re-read the spark installation instructions above to make sure you correctly set the `SPARK_HOME` environment variable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, import pyspark and instantiate a spark session."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyspark\n",
+    "import findspark\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
+    "findspark.init()\n",
     "spark = SparkSession.builder.appName('My Spark App').getOrCreate()"
    ]
   },
@@ -255,10 +228,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once you run this, you're ready to rock and roll with pyspark in your jupyter notebook.\n",
-    "\n",
-    "Note that Spark provides a handy web UI that you can use for monitoring and debugging.\n",
-    "Once you instantiate the spark session You can open the UI in your web browser at [http://localhost:4040/jobs/](http://localhost:4040/jobs/)."
+    "First we're running findspark's `init()` method to find our spark installation. If you run into errors here, \n",
+    "make sure you got the `SPARK_HOME` environment variable correctly set in the install instructions above.\n",
+    "Then we instantiate a spark session as `spark`.\n",
+    "Once you run this, you're ready to rock and roll with pyspark in your jupyter notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Note: Spark provides a handy web UI that you can use for monitoring and debugging. Once you instantiate the spark session You can open the UI in your web browser at [http://localhost:4040/jobs/](http://localhost:4040/jobs/)."
    ]
   },
   {
@@ -306,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +351,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,12 +364,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we want to peek at some of the data, we'll need to use the `show()` method, which is analogous to the pandas `head()`."
+    "If we want to peek at some of the data, we'll need to use the `show()` method, which is analogous to the pandas `head()`.\n",
+    "Remember that `show()` will cause pyspark to execute any operations that it's been lazily waiting to evaluate, so sometimes it can take a while to run."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -411,6 +392,8 @@
     }
    ],
    "source": [
+    "\n",
+    "# show the first few rows of the dataframe\n",
     "pyspark_df.show(5)"
    ]
   },
@@ -427,12 +410,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also use the following alternatives to see the column names or schema."
+    "You can also use the `printSchema()`  method for a nice vertical representation of the schema."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -454,10 +437,8 @@
     }
    ],
    "source": [
-    "# hide_output\n",
-    "# other ways to check out the column names and schema\n",
-    "pyspark_df.columns\n",
-    "pyspark_df.dtypes\n",
+    "\n",
+    "# show the dataframe schema\n",
     "pyspark_df.printSchema()"
    ]
   },
@@ -473,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +463,7 @@
        "DataFrame[day: string, time: string, total_bill: double]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +498,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +543,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +581,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, tip_percent: double]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +616,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, tip_percent: double]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +645,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, bill_squared: double]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -698,7 +679,7 @@
        "DataFrame[total_bill: double, tip: double, sex: string, smoker: string, day: string, time: string, size: bigint, is_male: boolean]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
