Turn on comments

--- a/_notebooks/2021-06-22-hello-pyspark.ipynb
+++ b/_notebooks/2021-06-22-hello-pyspark.ipynb
@@ -9,6 +9,7 @@
     "> Get up and running fast with a local pyspark installation, and learn the essentials of working with dataframes at scale.\n",
     "\n",
     "- toc: flase\n",
+    "- comments: true\n",
     "- image: images/guiones_wave.jpeg\n"
    ]
   },
