Ready to implement update_terminal_nodes

--- a/_drafts/hacks-for-freedman-gbm.ipynb
+++ b/_drafts/hacks-for-freedman-gbm.ipynb
@@ -558,14 +558,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PowerErrorLoss():\n",
     "    \n",
     "    def __init__(self, power):\n",
-    "        if power != 2:\n",
+    "        if power > 5:\n",
     "            raise ValueError('Really?')\n",
     "        self.power = power \n",
     "    \n",
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "1.4886248046118202"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "       -0.29834   , -0.80076522, -0.48674146, -1.44150587, -0.09459104])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,16 +644,16 @@
     "\n",
     "class GradientBoostingMachine():\n",
     "    \n",
-    "    def __init__(self, loss_function, n_trees, learning_rate=0.1, max_depth=1):\n",
-    "        self.loss_function=loss_function; self.n_trees=n_trees; \n",
+    "    def __init__(self, objective, n_trees, learning_rate=0.1, max_depth=1):\n",
+    "        self.objective=objective; self.n_trees=n_trees; \n",
     "        self.learning_rate=learning_rate; self.max_depth=max_depth;\n",
     "    \n",
     "    def fit(self, x, y):\n",
-    "        loss = self.loss_function.loss \n",
-    "        negative_gradient = self.loss_function.negative_gradient\n",
+    "        loss = self.objective.loss \n",
+    "        negative_gradient = self.objective.negative_gradient\n",
     "        self.trees = []\n",
-    "        self.base_prediction = self._set_base_prediction(y, loss)\n",
-    "        current_predictions = self.base_prediction\n",
+    "        self.initial_prediction = self._get_initial_prediction(y, loss)\n",
+    "        current_predictions = self.initial_prediction * np.ones(shape=y.shape, dtype=np.float64)\n",
     "        for _ in range(self.n_trees):\n",
     "            pseudo_residuals = negative_gradient(y, current_predictions)\n",
     "            tree = DecisionTreeRegressor(max_depth=self.max_depth)\n",
@@ -662,42 +662,42 @@
     "            current_predictions += self.learning_rate * tree.predict(x)\n",
     "            self.trees.append(tree)\n",
     "     \n",
-    "    def _set_base_prediction(self, y, loss):\n",
+    "    def _get_initial_prediction(self, y, loss):\n",
     "        fun = lambda c: loss(y, c)\n",
-    "        res = minimize(fun, y.mean())\n",
+    "        res = minimize(fun=fun, x0=y.mean())\n",
     "        return res.x[0]\n",
     "        \n",
     "    def _update_terminal_nodes(self, tree, y, current_predictions):\n",
     "        pass\n",
     "        \n",
     "    def predict(self, x):\n",
-    "        return (self.base_prediction + \n",
+    "        return (self.initial_prediction + \n",
     "                self.learning_rate * np.sum([tree.predict(x) for tree in self.trees], axis=0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gbm = GradientBoostingMachine(loss_function=PowerErrorLoss(power=2),\n",
+    "gbm = GradientBoostingMachine(objective=PowerErrorLoss(power=2),\n",
     "                              n_trees=4\n",
     "                             )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gbm.fit(x,y)"
+    "gbm.fit(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -706,13 +706,42 @@
        "(3.74375430933034, 3.74375430933034)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gbm.base_prediction, y.mean()"
+    "gbm.initial_prediction, y.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.61600237, 2.61600237, 2.61600237, 2.61600237, 2.61600237,\n",
+       "       2.61600237, 2.61600237, 2.61600237, 2.61600237, 2.61600237,\n",
+       "       2.61600237, 2.61600237, 2.61600237, 2.61600237, 2.61600237,\n",
+       "       2.61600237, 2.61600237, 2.61600237, 3.74375431, 3.74375431,\n",
+       "       3.74375431, 3.74375431, 3.74375431, 3.74375431, 3.74375431,\n",
+       "       3.74375431, 3.74375431, 3.74375431, 3.74375431, 3.74375431,\n",
+       "       3.74375431, 3.74375431, 3.74375431, 3.74375431, 3.74375431,\n",
+       "       3.74375431, 3.74375431, 3.74375431, 3.74375431, 3.74375431,\n",
+       "       3.74375431, 3.74375431, 3.74375431, 3.74375431, 3.74375431,\n",
+       "       3.74375431, 3.74375431, 3.74375431, 3.74375431, 3.74375431])"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gbm.predict(x)"
    ]
   },
   {
